# medical-image-analysis

./: AUTHORS  Makefile.am  README.md  aclocal.m4  configure  configure.ac
ALLOC_LIB/: Alloc.c  Alloc.h  Alloc_CHAR.c  Alloc_DOUBLE.c  Alloc_FLOAT.c  Alloc_INT.c  Makefile.am
CELLULAR_AUTOMATA/: CAIO.c  CAIO.h  CAcell.c  CAcell.h  CAcellular_automaton.c  CAcellular_automaton.h  CAsymbol.c  CAsymbol.h  Makefile.am  cellular_automata.h
CLUSTERING_3D/: Makefile.am  clengine.c  clengine.h  clestats.c  clestats.h  clio.c  clio.h  clunc.h  cluster.c  cluster.h  clustering.h  cstats.c  cstats.h  point.c  point.h  vector.c  vector.h
COMMON/: Common_IMMA.c  Common_IMMA.h  Makefile.am
CONTOUR/: Makefile.am  connected.c  connected.h  contour.c  contour.h
DATA_READERS/: Makefile.am  data_readers.h  histogram.c
DATA_READERS/parser/histogram/: Grammar.c  Grammar.h  Grammar.tab.h  Grammar.y  Makefile.am  Tokenizer.c  Tokenizer.l
DATA_STRUCTURES/FIFO/: fifo.h
DATA_STRUCTURES/LINKED_LIST/: LinkedList.c  LinkedList.h  LinkedListItem.c  LinkedListItem.h  LinkedListIterator.c  LinkedListIterator.h  Makefile.am
DATA_STRUCTURES/MATRIX/: Makefile.am  matrix.c  matrix.h
FILTERS_LIB/: Makefile.am  combinatorics.c  combinatorics.h  erosion.c  erosion.h  filters.h  filters2D.c  filters2D.h  filters3D.c  filters3D.h  histogram.c  histogram.h  maps.c  maps.h  normalise.c  normalise.h  otsu.c  otsu.h  private_filters2D.h  private_filters3D.h  random_numbers.c  random_numbers.h  statistics.h  statistics1D.c  statistics2D.c  statistics3D.c  statistics_float.c  threshold.c  threshold.h  threshold_private.h  timeseries.h
IO_LIB/: IO.h  IO_constants.h
IO_LIB/ANALYZE/: IO_analyze.c  IO_analyze.h  IO_analyzeP.h  Makefile.am  analyze_db.h
IO_LIB/MISC/: IO_misc.c  IO_misc.h  Makefile.am
IO_LIB/ROI/: Grammar.c  Grammar.y  IO_roi.c  IO_roi.h  Makefile.am  Tokenizer.c  Tokenizer.l  y.tab.h
IO_LIB/UNC/: IO_jpeg.c  IO_jpeg.h  IO_tiff.c  IO_tiff.h  IO_unc.c  IO_unc.h  Makefile.am
NEURAL_NETWORK/: BPNetworkConstants.h  BPNetworkDeclarations.h  BPNetworkDefinitions.h  BPNetworkError.h  BPNetworkStandardInclude.h  neural_network.h
NEW_C/LIB/: assign.h  calculate.h  derivatives_wrt_c.h  derivatives_wrt_w.h  do_clustering.h  entropy_clustering.h  initialise.h  io.h  memory.h
REGISTRATION/: Makefile.am  dumpreslicer.c  dumpreslicer.h  native2registered.c  native2registered.h  registration.h
RING/: Makefile.am  ring.c  ring.h
ROI/: Makefile.am  roi_utils.c  roi_utils.h  roiedge.c
SIGNAL/: signal_handler.h
SPIRAL/: Makefile.am  spiral.c  spiral.h
SPLINE/: Makefile.am  spline.c  spline.h
UTILS/ANALYZE/: ANALYZE2unc.c  Makefile.am  headconv.c  headshow.c  imgconv.c
UTILS/ROI/: Makefile.am  ROIextract.c  ROIfilter.c  ROIsmoothSegmentation.c  ROIstats.c
UTILS/UNC/: Makefile.am  UNC2analyze.c  UNC2jpeg.c  UNC2raw.c  UNC2tiff.c  UNCascii.c  UNCblow_pixels.c  UNCboundingBox.c  UNCcalculateAccuracyOfTissueSegmentation.c  UNCcalculateAccuracyOfTissueSegmentation2.c  UNCcellular_automaton.c  UNCclear_cut_clusters.c  UNCclustering3.c  UNCcompare_prediction_with_standard.c  UNCconnected.c  UNCcontour.c  UNCcopy_header_info.c  UNCcrap.c  UNCcrop.c  UNCdiff.c  UNCdilate.c  UNCdiscrete.c  UNCdistance_from_brain_boundaries.c  UNCdump_header.c  UNCenhanceB0.c  UNCentropyFromProbabilityMaps.c  UNCerode.c  UNCextractSlices.c  UNCfilter2D.c  UNCfilter3D.c  UNCgradient.c  UNChistogram.c  UNCmake.c  UNCmap.c  UNCmask.c  UNCmatchHistogram.c  UNCmaxLikelihood.c  UNCnseg.c  UNCop.c  UNCotsu.c  (+15 more)
UTILS/VARIOUS/: ASCIIclustering.c  Combinations.c  Makefile.am  Merge.c  Normalise.c  Permutations.c  ProduceRandomFilename.c  ascii2unc.c  fft.c  nativeSpace2reslicedSpace.c  ppm2tiff.c  raw2unc.c  shuffle.c
libim/: Makefile.am  image.c  image.h  iminfo.c  iminfo.h  pdim.c
oingo/include/oingo/: ImplementedFunctions.h  assignment.h  boolean.h  constants.h  designator.h  dimensions.h  expression.h  function.h  imagE.h  number.h  oingo.h  operator.h  parameter.h  point.h  region.h  strinG.h  supertype.h  symbol.h  symboltable.h  type.h  typedefs.h
